add Mute Composter, closes #118